game sounds and readme update

--- a/spaceInvaders/index.html
+++ b/spaceInvaders/index.html
@@ -6,6 +6,8 @@
     <title>Space Invaders</title>
     <script src="app.js"></script>
     <link rel="stylesheet" href="style.css">
+    <audio id="audi" src="sounds/Metal-Impact-Hit.mp3"></audio>
+    <audio id="aud" src="sounds/Big-Grenade-Explosion.mp3"></audio>
 </head>
 <body>
     <h3>Score:<span id="result"></span></h3>
