--- a/Tetris/index.html
+++ b/Tetris/index.html
@@ -8,6 +8,27 @@
     <script src="app.js"></script>
 </head>
 <body>
+
+    <div class="previous-shape">
+        <div class="previous-grid">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     <button type="button" name="button" id="start">start</button>
     <div class="game">
       <div class="grid">
@@ -211,16 +232,16 @@
         <div></div>
         <div></div>
         <div></div>
-        <div class="end"></div>
-        <div class="end"></div>
-        <div class="end"></div>
-        <div class="end"></div>
-        <div class="end"></div>
-        <div class="end"></div>
-        <div class="end"></div>
-        <div class="end"></div>
-        <div class="end"></div>
-        <div class="end"></div>
+        <div class="block3"></div>
+        <div class="block3"></div>
+        <div class="block3"></div>
+        <div class="block3"></div>
+        <div class="block3"></div>
+        <div class="block3"></div>
+        <div class="block3"></div>
+        <div class="block3"></div>
+        <div class="block3"></div>
+        <div class="block3"></div>
       </div>
     </div>
 </body>
