--- a/Tetris/index.html
+++ b/Tetris/index.html
@@ -30,6 +30,8 @@
         </div>
     </div>
     <button type="button" name="button" id="start">start</button>
+    <h1 class="score-display">0</h1>
+    <h1 class="lines-display">0</h1>
     <div class="game">
       <div class="grid">
         <div class="block"></div>
