--- a/breakout/index.html
+++ b/breakout/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="score"></div>
     <div class="grid">
         
     </div>
